  * Add comments to lintian overrides.
  * Create /var/run/icinga in idoutils init script too.
  * Drop unused override for dir-or-file-in-var-run.
  * Bump debhelper compatibility to 9.
  * Enable all hardening buildflags.
  * Add lintian overrides for package-contains-empty-directory.
  * Don't install .in templates in examples.
  * Don't install p1.pl with execute bit set.

 -- Bas Couwenberg <sebastic@debian.org>  Sat, 03 Dec 2016 23:27:06 +0100

icinga (1.13.3-3) unstable; urgency=medium

  [ Markus Frosch ]
  * [0e0a082] Update VCS URLs
  * [5da079a] Remove libpng12-dev build-dep, use only libpng-dev
    (Closes: #810173)

  [ Nishanth Aravamudan ]
  * [40e540b] Add build-arch and build-indep targets to d/rules
    (Closes: #821992)
  * [6182dcb] Classic UI: fixed menu disappear with jQuery 1.11+
    (Closes: #831332)

  [ Markus Frosch ]
  * [40490d6] Add patch to fix CVE-2015-8010 (Closes: #803432)

 -- Markus Frosch <lazyfrosch@debian.org>  Sun, 21 Aug 2016 14:12:35 +0200

icinga (1.13.3-2) unstable; urgency=medium

  * [9f7081e] Add myself as uploader
  * [4877e88] Add missing sources for jquery-ui (Closes: #788723)
  * [8522150] Override mis-detected missing source

 -- Markus Frosch <lazyfrosch@debian.org>  Wed, 30 Dec 2015 12:50:51 +0100

icinga (1.13.3-1) unstable; urgency=medium

  * [8197b77] Imported Upstream version 1.13.3

 -- Alexander Wirt <formorer@debian.org>  Wed, 15 Jul 2015 15:27:22 +0200

icinga (1.13.2-1) unstable; urgency=medium

  * [d7ee3a5] Imported Upstream version 1.13.2
  * [af0ed78] Install new database schema
  * [7349514] Add turkish debconf translation. (Closes: #760330)
  * [500332d] Update 52_icinga.cfg-debianize

 -- Alexander Wirt <formorer@debian.org>  Sat, 13 Jun 2015 08:15:35 +0200

icinga (1.12.2-2) experimental; urgency=medium

  * [17f0a2c] Fix plugin package name

 -- Alexander Wirt <formorer@debian.org>  Sat, 14 Mar 2015 07:42:11 +0100

icinga (1.12.2-1) experimental; urgency=medium
